--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile files('src/main/libs/fastjson-1.2.2.jar')
+    compile files('src/main/libs/okhttp-2.5.0.jar')
+    compile files('src/main/libs/okio-1.6.0.jar')
 }
