--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(include: ['*.jar'], dir: 'src/main/libs')
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile files('src/main/libs/fastjson-1.2.2.jar')
     compile files('src/main/libs/okhttp-2.5.0.jar')
