--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.borg.androidemo" >
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-    <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
+
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
+    <uses-feature
+        android:name="android.hardware.bluetooth_le"
+        android:required="true" />
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -95,24 +100,40 @@
                 <category android:name="aptentity.intent.category.APT_CODE" />
             </intent-filter>
         </activity>
-        <activity android:name=".ble.DeviceScanActivity"
-            android:label="@string/app_name">
+        <activity
+            android:name=".ble.DeviceScanActivity"
+            android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="aptentity.intent.category.APT_CODE"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="aptentity.intent.category.APT_CODE" />
             </intent-filter>
         </activity>
-        <activity android:name=".ble.DeviceControlActivity"/>
-        <service android:name=".ble.BluetoothLeService" android:enabled="true"/>
+        <activity android:name=".ble.DeviceControlActivity" />
+
+        <service
+            android:name=".ble.BluetoothLeService"
+            android:enabled="true" />
+
         <activity
             android:name=".ble2.ScanActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="aptentity.intent.category.APT_CODE" />
             </intent-filter>
         </activity>
         <activity android:name=".ble2.DeviceActivity" />
+        <activity
+            android:name=".activity.VolleyTestActivity"
+            android:label="@string/title_activity_volley_test" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="aptentity.intent.category.APT_CODE" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
