--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,16 +102,17 @@
         </activity>
         <activity
             android:name=".ble.DeviceScanActivity"
-            android:theme="@style/AppTheme"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="aptentity.intent.category.APT_CODE" />
             </intent-filter>
         </activity>
-        <activity android:name=".ble.DeviceControlActivity"
-            android:theme="@style/AppTheme"/>
+        <activity
+            android:name=".ble.DeviceControlActivity"
+            android:theme="@style/AppTheme" />
 
         <service
             android:name=".ble.BluetoothLeService"
@@ -119,19 +120,29 @@
 
         <activity
             android:name=".ble2.ScanActivity"
-            android:theme="@style/AppTheme"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="aptentity.intent.category.APT_CODE" />
             </intent-filter>
         </activity>
-        <activity android:name=".ble2.DeviceActivity"
-            android:theme="@style/AppTheme"/>
+        <activity
+            android:name=".ble2.DeviceActivity"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activity.VolleyTestActivity"
             android:label="@string/title_activity_volley_test" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="aptentity.intent.category.APT_CODE" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activity.EventBusTestActivity"
+            android:label="@string/title_activity_event_bus_test" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
