commit handler test and fragment test

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile files('src/main/libs/okhttp-2.5.0.jar')
     compile files('src/main/libs/okio-1.6.0.jar')
     compile files('src/main/libs/eventbus.jar')
+    compile files('src/main/libs/lite-async-1.0.0.jar')
 }
