--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.LiteAsyncSamplesActivity">
+        <activity android:name=".activity.LiteAsyncSamplesActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -183,7 +183,16 @@
                 <category android:name="aptentity.intent.category.APT_CODE" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ble.BleTestActivity"
+            android:label="@string/title_activity_ble_test" >
+        </activity>
 
+        <service android:name="com.borg.androidemo.devices.connection.bluetooth.ble.service.BLEService" >
+            <intent-filter>
+                <action android:name="com.yunos.alible.remoteservice" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
