--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -200,6 +200,14 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".fragment.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="aptentity.intent.category.APT_CODE" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ble.BleTestActivity"
             android:label="@string/title_activity_ble_test" >
         </activity>
