--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,9 @@
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <uses-feature
         android:name="android.hardware.bluetooth_le"
         android:required="true" />
@@ -17,7 +18,6 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar" >
-
         <activity
             android:name=".activity.FirstActivity"
             android:label="@string/app_name" >
@@ -199,8 +199,7 @@
                 <category android:name="aptentity.intent.category.APT_CODE" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".fragment.MainActivity">
+        <activity android:name=".fragment.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -212,11 +211,23 @@
             android:label="@string/title_activity_ble_test" >
         </activity>
 
-        <service android:name="com.borg.androidemo.devices.connection.bluetooth.ble.service.BLEService" >
+        <service android:name=".devices.connection.bluetooth.ble.service.BLEService" >
             <intent-filter>
                 <action android:name="com.yunos.alible.remoteservice" />
             </intent-filter>
         </service>
+        <service android:name=".service.MessengerService"
+            android:process=":remote">
+
+        </service>
+        <activity
+            android:name=".activity.MessengerActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="aptentity.intent.category.APT_CODE" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
