--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -216,12 +216,12 @@
                 <action android:name="com.yunos.alible.remoteservice" />
             </intent-filter>
         </service>
-        <service android:name=".service.MessengerService"
-            android:process=":remote">
-
+        <service
+            android:name=".service.MessengerService"
+            android:process=":remote" >
         </service>
-        <activity
-            android:name=".activity.MessengerActivity">
+
+        <activity android:name=".activity.MessengerActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -234,6 +234,7 @@
             android:theme="@style/NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="aptentity.intent.category.APT_CODE" />
             </intent-filter>
         </activity>
@@ -242,9 +243,11 @@
             android:label="@string/title_activity_notification_listener_test" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="aptentity.intent.category.APT_CODE" />
             </intent-filter>
         </activity>
+
         <service
             android:name="com.borg.mvp.service.NotificationMonitor"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" >
@@ -252,6 +255,16 @@
                 <action android:name="android.service.notification.NotificationListenerService" />
             </intent-filter>
         </service>
+
+        <activity
+            android:name="com.borg.mvp.view.CustomViewActivity"
+            android:label="@string/title_activity_custom_view" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="aptentity.intent.category.APT_CODE" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
