--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,16 +6,18 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-feature android:name="android.hardware.camera"/>
-    <uses-feature android:name="android.hardware.camera.flash"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.flash" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <uses-feature
         android:name="android.hardware.bluetooth_le"
         android:required="true" />
@@ -94,6 +96,12 @@
             </intent-filter>
         </service>
 
+        <service android:name="com.borg.binder.aidil.RemoteAidlService"
+            android:process=":remote">
+            <intent-filter>
+                <action android:name="com.borg.myaidl"></action>
+            </intent-filter>
+        </service>
         <activity
             android:name=".aes.AesTestActivity"
             android:label="@string/title_activity_aes_test" >
@@ -268,8 +276,8 @@
 
         <activity
             android:name="com.borg.mvp.view.CustomViewActivity"
-            android:theme="@style/titleTheme"
-            android:label="@string/title_activity_custom_view" >
+            android:label="@string/title_activity_custom_view"
+            android:theme="@style/titleTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -303,70 +311,79 @@
                 <category android:name="aptentity.intent.category.APT_CODE" />
             </intent-filter>
         </activity>
-        <activity android:name="com.borg.mvp.view.SearchResultActivity">
+        <activity android:name="com.borg.mvp.view.SearchResultActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="aptentity.intent.category.APT_CODE" />
             </intent-filter>
         </activity>
-        <activity android:name="com.borg.mvp.view.MultipleTypeListActivity">
+        <activity android:name="com.borg.mvp.view.MultipleTypeListActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="aptentity.intent.category.APT_CODE" />
             </intent-filter>
         </activity>
-        <activity android:name="com.borg.hrMonitor.HeartRateMonitor">
+        <activity android:name="com.borg.hrMonitor.HeartRateMonitor" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="aptentity.intent.category.APT_CODE" />
             </intent-filter>
         </activity>
-        <activity android:name="com.borg.mvp.view.MyListActivity">
+        <activity android:name="com.borg.mvp.view.MyListActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="aptentity.intent.category.APT_CODE" />
             </intent-filter>
         </activity>
-        <activity android:name="com.borg.mvp.view.SwipeActivity">
+        <activity android:name="com.borg.mvp.view.SwipeActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="aptentity.intent.category.APT_CODE" />
             </intent-filter>
         </activity>
-        <activity android:name="com.borg.mvp.view.SlideCutListActivity">
+        <activity android:name="com.borg.mvp.view.SlideCutListActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="aptentity.intent.category.APT_CODE" />
             </intent-filter>
         </activity>
-        <activity android:name="com.borg.mvp.view.MySwipeActivity">
+        <activity android:name="com.borg.mvp.view.MySwipeActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="aptentity.intent.category.APT_CODE" />
             </intent-filter>
         </activity>
-        <activity android:name="com.borg.mvp.view.ViewPagerActivity">
+        <activity android:name="com.borg.mvp.view.ViewPagerActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="aptentity.intent.category.APT_CODE" />
             </intent-filter>
         </activity>
-        <activity android:name="com.borg.mvp.view.ViewPager2Activity">
+        <activity android:name="com.borg.mvp.view.ViewPager2Activity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="aptentity.intent.category.APT_CODE" />
             </intent-filter>
         </activity>
-        <activity android:name="cn.limc.androidcharts.AndroidChartsActivity">
+        <activity android:name="cn.limc.androidcharts.AndroidChartsActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="aptentity.intent.category.APT_CODE" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.borg.binder.BinderTestActivity"
+            android:label="@string/title_activity_aidltest" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
