--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -400,6 +400,13 @@
         <activity android:name="com.borg.mvp.view.recyclerview.StaggeredGridLayoutActivity">
 
         </activity>
+        <activity android:name="com.borg.mvp.view.recyclerview.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="aptentity.intent.category.APT_CODE" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
