--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,10 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.0.+'
     compile 'com.android.support:support-v4:23.0.1'
     compile 'com.android.support:percent:23.0.1'
+    compile 'org.roboguice:roboguice:3.0'
+//    compile ('com.google.inject.extensions:guice-assistedinject:3.0'){
+//        exclude group: 'com.google.inject'
+//    }
     compile 'com.bartoszlipinski.recyclerviewheader:library:1.2.0'
     compile files('src/main/libs/fastjson-1.2.2.jar')
     compile files('src/main/libs/okhttp-2.5.0.jar')
