--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -430,7 +430,16 @@
                 <category android:name="aptentity.intent.category.APT_CODE" />
             </intent-filter>
         </activity>
-        <activity android:name="com.borg.mvp.view.BaseActivity">
+        <activity android:name="com.borg.mvp.view.BaseActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="aptentity.intent.category.APT_CODE" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.borg.mvp.view.ViewDragHelperActivity"
+            android:label="@string/title_activity_view_drag_helper" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
