--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,6 @@ dependencies {
     compile files('src/main/libs/lite-async-1.0.0.jar')
     compile files('src/main/libs/core-3.2.1.jar')
     compile files('src/main/libs/nineoldandroids-2.4.0.jar')
+    compile 'me.relex:circleindicator:1.1.8@aar'
     compile 'com.orhanobut:logger:1.8'//log输出框架
 }
